[project]
name = "roboquant-interactive"
version = "0.2.0"
description = "Examples how to use roboquant with Jupyter and other interactive tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.11.26",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "roboquant>=1.7.0",
    "streamlit>=1.43.2",
]
