[project]
name = "roboquant-interactive"
version = "0.3.0"
description = "Examples how to use roboquant with Jupyter and other interactive tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "roboquant>=1.8.4",
    "streamlit>=1.44.1",
]
